[package]
name = "rust-api"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket =  "0.4.7"

trust-graph = "0.2.7"
fluence-identity = "0.3.0"
air-interpreter-wasm = "0.10.7"

libp2p = { version = "0.36.2", package = "fluence-fork-libp2p", features = ["tcp-tokio"] }
futures = "0.3.13"
async-std = { version = "1.6.5", features = ["unstable"] }

humantime-serde = "1.0.1"

# log = "0.4.11" # no
env_logger = "0.7.1"
clap = "3.0.0-beta.2"
#prometheus = "0.9.0" # no
#tide = "0.16.0" # no
bs58 = "0.3.1" 
# itertools = "0.10.0"
# eyre = "0.6.5"
# fluence-app-service = "0.7.2"

parking_lot = "0.11.1"
maplit = "1.0.2"
serde_json = "1.0.64"
fstrings = "0.2.3"
serde = "1.0.118"
multihash = "0.13"
base64 = "0.13.0"
blake3 = "0.3.7"
criterion = { version = "0.3.4", features = ["async_std", "html_reports"] }